# TimeIsMoney-TimeIsMoneyDB_CMake

./: CMakeLists.txt
include/: externalapi_table.hpp  invoice_table.hpp  serial_table.hpp  taskdb.hpp  tasks_table.hpp
src/: taskdb.cpp
